--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,32 +8,101 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/game_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/green"
-        android:text="Tetris"
-        android:textColor="@color/black"
-        android:textSize="50sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/black"
+        android:text="Score: 0"
+        android:text_color="@color/text_color"
+        app:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/tetris"
-        android:layout_width="0dp"
-        android:layout_height="137dp"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="25dp"
-        android:background="@drawable/gray"
-        android:text="Play"
-        android:textColor="@color/black"
-        android:textSize="40sp"
-        app:backgroundTint="@color/design_default_color_background"
-        app:layout_constraintEnd_toEndOf="parent"
+    <android.gameengine.tetris.views.GameFrame
+        android:id="@+id/game_container"
+        android:layout_width="@dimen/game_size"
+        android:layout_height="@dimen/game_size"
+        android:layout_marginTop="5dp"
+        android:background="@color/black"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_score"
+        />
+
+    <TextView
+        android:id="@+id/game_status"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="GAME OVER"
+        android:textColor="@color/text_color"
+        android:textSize="30dp"
+        app:layout_constraintTop_toTopOf="@+id/game_container"
+        app:layout_constraintStart_toStartOf="@+id/game_container"
+        app:layout_constraintEnd_toEndOf="@+id/game_container"
+        app:layout_constraintBottom_toBottomOf="@+id/game_container"/>
+
+
+    <Button
+        android:id="@+id/game_ctl_button"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/game_ctl_btn_bg"
+        android:text="start"
+        android:textColor="@color/text_color"
+        app:layout_constraintEnd_toEndOf="@+id/game_container"
+        app:layout_constraintTop_toBottomOf="@+id/game_container" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.68"/>
+
+    <Button
+        android:id="@+id/fire_btn"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:background="@drawable/game_btn"
+        app:layout_constraintStart_toEndOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="@+id/up_btn"
+        app:layout_constraintBottom_toBottomOf="@+id/down_btn" />
+    
+    <Button
+        android:id="@+id/up_btn"
+        style="@style/NavButton"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/game_btn"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_container" />
+
+
+    <Button
+        android:id="@+id/left_btn"
+        style="@style/NavButton"
+        android:background="@drawable/game_btn"
+        app:layout_constraintEnd_toStartOf="@+id/up_btn"
+        app:layout_constraintTop_toBottomOf="@+id/up_btn"/>
+
+    <Button
+        android:id="@+id/right_btn"
+        style="@style/NavButton"
+        android:background="@drawable/game_btn"
+        app:layout_constraintStart_toEndOf="@+id/up_btn"
+        app:layout_constraintTop_toBottomOf="@+id/up_btn"/>
+
+
+    <Button
+        android:id="@+id/down_btn"
+        style="@style/NavButton"
+        android:background="@drawable/game_btn"
+        app:layout_constraintStart_toEndOf="@+id/left_btn"
+        app:layout_constraintTop_toBottomOf="@+id/left_btn"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
