--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#00808080</color>
+    <color name="app_bg">#CECECE</color>
+    <color name="btn_color">#5463FF</color>
+    <color name="text_color">#FFC300</color>
 </resources>
