--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,7 @@
         android:layout_marginTop="16dp"
         android:background="@color/black"
         android:text="Score: 0"
-        android:text_color="@color/text_color"
-        app:layout_marginTop="20dp"
+        android:textColor="@color/text_color"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
