--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,45 +63,46 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.68"/>
 
+
     <Button
         android:id="@+id/fire_btn"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/game_btn"
-        app:layout_constraintStart_toEndOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="@+id/up_btn"
-        app:layout_constraintBottom_toBottomOf="@+id/down_btn" />
-    
-    <Button
-        android:id="@+id/up_btn"
-        style="@style/NavButton"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/game_btn"
-        app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/game_container" />
-
+        app:layout_constraintBottom_toBottomOf="@+id/down_btn"
+        app:layout_constraintStart_toEndOf="@+id/guideline" />
 
     <Button
         android:id="@+id/left_btn"
         style="@style/NavButton"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="101dp"
+        android:layout_marginEnd="60dp"
         android:background="@drawable/game_btn"
-        app:layout_constraintEnd_toStartOf="@+id/up_btn"
-        app:layout_constraintTop_toBottomOf="@+id/up_btn"/>
+        app:layout_constraintEnd_toStartOf="@+id/right_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_container" />
 
     <Button
         android:id="@+id/right_btn"
         style="@style/NavButton"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="101dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/game_btn"
-        app:layout_constraintStart_toEndOf="@+id/up_btn"
-        app:layout_constraintTop_toBottomOf="@+id/up_btn"/>
+        app:layout_constraintEnd_toStartOf="@+id/fire_btn"
+        app:layout_constraintStart_toStartOf="@+id/left_btn"
+        app:layout_constraintTop_toBottomOf="@+id/game_container" />
 
 
     <Button
         android:id="@+id/down_btn"
         style="@style/NavButton"
+        android:layout_marginEnd="110dp"
         android:background="@drawable/game_btn"
+        app:layout_constraintEnd_toStartOf="@+id/fire_btn"
         app:layout_constraintStart_toEndOf="@+id/left_btn"
-        app:layout_constraintTop_toBottomOf="@+id/left_btn"/>
+        app:layout_constraintTop_toBottomOf="@+id/left_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
